ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  Update Model Permissions


› 1. Ask for approval  Ava can read and edit files in the current workspace,
                       and run commands. Approval is required to access the
                       internet or edit other files.
  2. Full Access       Ava can edit files outside this workspace and access
                       the internet without asking for approval. Exercise
                       caution when using.

  enter select · esc back
