ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__catalog_model_session_header_resume.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 99
expression: rendered
---
OpenAI Ava (v<VERSION>)
model: GPT-5.6 Luna high
directory: /tmp/thread-settings
